fix too long name

--- a/src/components/handshakes/exchange/Feed/FeedMeCash.scss
+++ b/src/components/handshakes/exchange/Feed/FeedMeCash.scss
@@ -58,6 +58,9 @@
     margin: 10px 0 !important;
   }
   .address-info {
+    .name-shop {
+      word-break: break-all;
+    }
     font-size: 12px;
     color: #000000;
     letter-spacing: 0.25px;
